feat(api): add routes for getting user and list of users
