# api/routes/api.php
@@ -3,23 +3,16 @@
 declare(strict_types=1);
 
 use App\Http\Controllers\Api\Auth\AuthController;
+use App\Http\Controllers\Api\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-/*
-|--------------------------------------------------------------------------
-| API Routes
-|--------------------------------------------------------------------------
-|
-| Here is where you can register API routes for your application. These
-| routes are loaded by the RouteServiceProvider within a group which
-| is assigned the "api" middleware group. Enjoy building your API!
-|
-*/
-
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
+Route::middleware('auth:sanctum')->get(
+    '/user',
+    function (Request $request) {
+        return $request->user();
+    }
+);
 
 Route::group(
     [
@@ -29,12 +22,21 @@ Route::group(
     static function () {
         Route::post('register', [AuthController::class, 'register']);
         Route::post('login', [AuthController::class, 'login']);
-
-        Route::group(
-            ['middleware' => 'auth:sanctum'],
-            static function () {
-                Route::post('logout', [AuthController::class, 'logout']);
-            }
-        );
     }
 );
+
+//Route::group(
+//    ['middleware' => 'auth:sanctum'],
+//    static function () {
+//        Route::post('logout', [AuthController::class, 'logout']);
+//    }
+//);
+
+Route::group(
+    ['prefix' => 'message'],
+    static function () {
+        //
+    }
+);
+
+Route::resource('users', UserController::class)->only(['index', 'show']);
